# bevy-basics

./: Cargo.toml
bevy_headless/: Cargo.toml
bevy_headless/src/: lib.rs  node.rs  plugin.rs  utils.rs
episode-1/: Cargo.toml
episode-5/: Cargo.toml
episode-5/assets/: Spaceship.glb
episode-5/src/: ai_agent.rs  ai_framework.rs  asset_loader.rs  asteroids.rs  camera.rs  collision_detection.rs  event_handler.rs  main.rs  movement.rs  spaceship.rs  state.rs  vision.rs
episode-5/src/gpu_copy/: image_copy.rs  mod.rs
gpu_copy/: Cargo.toml
gpu_copy/src/: lib.rs  node.rs  plugin.rs  utils.rs
gpu_copy_minimal_example/: Cargo.toml
gpu_copy_minimal_example/src/: main.rs
minimal_example/: Cargo.toml
minimal_example/src/: main.rs
