[workspace]
resolver = "2"
members = [
  "episode-1",
  "episode-2",
  "episode-3",
  "episode-4",
  "episode-5",
  "bevy_headless",
  "minimal_example",
]

package.rust-version = "1.75.0"

[workspace.dependencies]
anyhow = "1.0.75"
async-net = "2.0.0"
base64 = "0.21.5"
bevy = { version = "0.12.1", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_render",
  "multi-threaded",
] }
bevy_panorbit_camera = "0.10.0"
crossbeam-channel = "0.5.10"
log = "0.4.20"
pretty_env_logger = "0.5.0"
wgpu = "0.17.2"
tungstenite = "0.21.0"
