[package]
name = "episode-5"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy_editor_pls = "0.7.0"
bevy_mod_picking = "0.17.0"
rand = "0.8.5"
wgpu = "0.17.1"
pollster = "0.3"
futures-intrusive = "0.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
