[package]
name = "episode-5"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
#bevy_editor_pls = "0.7.0"
bevy_mod_picking = "0.18.0"
image = "0.24.9"
rand = "0.8.5"
wgpu.workspace = true
pollster = "0.3"
futures-intrusive = "0.5"
#bevy_rapier3d = "0.18.0"
gpu_copy = { path = "../gpu_copy"}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
